# honeypot-detector-mcp

./: .gitignore  README.md  http_app.py  main.py  plan.md  pyproject.toml  smithery.yaml
