[tool.poetry]
name = "honeypot-detector-mcp"
version = "0.1.0"
description = "MCP server that checks honeypot tokens using honeypot.is"
authors = ["MCP Maintainer <maintainer@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mcp = { version = ">=1.9.4", extras = ["cli"] }
httpx = "^0.27.0"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
